<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_weather"
        style="@style/TextViewHighStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/et_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/city_name"
        android:textSize="@dimen/text_size_common"
        android:layout_marginTop="@dimen/search_margin_top"
        android:inputType="textVisiblePassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_weather"
        />

    <CheckBox
        android:id="@+id/cb_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/et_city_name"
        app:layout_constraintTop_toBottomOf="@id/et_city_name"
        />


    <CheckBox
        android:id="@+id/cb_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/et_city_name"
        app:layout_constraintTop_toBottomOf="@id/cb_humidity" />

    <CheckBox
        android:id="@+id/cb_speed_of_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_of_wind"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/et_city_name"
        app:layout_constraintTop_toBottomOf="@id/cb_pressure" />

    <Button
        android:id="@+id/btn_buttonSearch"
        style="@style/PurpleButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_today"
        app:layout_constraintTop_toBottomOf="@id/cb_speed_of_wind"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>